@@ -207,7 +207,7 @@ class PaymentAuthorizeDotNet extends IsotopePayment
 		
 			foreach(array_keys($arrResponses) as $key)
 			{
-				$arrReponseLabels[strtolower(standardize($key))] = $key;
+				$arrReponseLabels[strtolower(standardize($key, true))] = $key;
 			}		
 		
 			$arrSet['transaction_response'] = $arrResponseCodes['response_type'];
@@ -289,7 +289,7 @@ class PaymentAuthorizeDotNet extends IsotopePayment
 								
 		foreach(array_keys($arrResponses) as $key)
 		{
-			$arrReponseLabels[strtolower(standardize($key))] = $key;
+			$arrReponseLabels[strtolower(standardize($key, true))] = $key;
 		}
 						
 		$objTemplate->fields = $this->generateResponseString($arrResponses, $arrReponseLabels);
@@ -413,7 +413,7 @@ class PaymentAuthorizeDotNet extends IsotopePayment
 								
 			foreach(array_keys($arrResponses) as $key)
 			{
-				$arrReponseLabels[strtolower(standardize($key))] = $key;
+				$arrReponseLabels[strtolower(standardize($key, true))] = $key;
 			}
 						
 			$objTemplate->fields = $this->generateResponseString($arrResponses, $arrReponseLabels);
@@ -661,7 +661,7 @@ $return .= '</div></div>';
 							break;
 					}
 			
-					$arrResponse[strtolower(standardize($ftitle))] = $fval;
+					$arrResponse[strtolower(standardize($ftitle, true))] = $fval;
 				}
 	
 			$i++;
