@@ -25,6 +25,7 @@ Version 0.2.6 (2011-02-??)
 - Fixed: Downloads in PDF invoice caused fatal error
 - Fixed: Product filter searched for field default value (Ticket #377)
 - Fixed: Moved cart & checkout table summary to language file (Ticket #338)
+- Adopted Contao Core Ticket #2853
 
 Version 0.2.5 (2011-02-01)
 ------------------------------
